--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
   ],
   "main": "src/index.js",
   "dependencies": {
-    "axios": "0.27.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-redux": "8.0.1",
-    "react-router-dom": "6.3.0",
-    "react-scripts": "4.0.0",
-    "redux": "4.2.0"
+    "axios": "^0.27.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^4.0.0",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
+    "@babel/runtime": "^7.13.8",
+    "typescript": "^4.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
